# mesh2py

./: CMakeLists.txt  LICENSE  Notes.txt  README.md  main.cpp  scene_data.cpp  scene_data.h
cmake/: compiler_config.cmake
fbx2usd/: fbx_importer.cpp  fbx_importer.h  fbx_importer_test.cpp
python/: CMakeLists.txt  fbx_importer_bindings.cpp  mesh2py_bindings.cpp
src/: CMakeLists.txt
src/common/: scene_data.cpp  scene_data.h
src/fbx2py/: fbx_importer.cpp  fbx_importer.h
tests/: fbx_importer_test.cpp
